CJAL-18/01/2019-Ajustes Css DevExpress

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/Nuevo.cshtml
@@ -12,10 +12,9 @@
         )
 <script src="~/Resources/js/lib/jquery-1.9.1.js"></script>
 <script src="~/Resources/js/Clientes.js"></script>
-<script src="~/Resources/js/Clientes.js"></script>
+<link href="~/Resources/css/toggleCl.css" rel="stylesheet" />
 <script type="text/javascript">
     function OnSelectedChangeFilter(s, e) {
-        debugger
         if (s.GetValue() == 2) {//($('#ddlTipopersona').find('option:selected').text() == 'Moral') {
             $('#div_hideRP').show();
             $('#div_hidePM').hide();
