--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarCliente.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Clientes/EditarCliente.cshtml
@@ -77,7 +77,7 @@
                            {
                                MVCxComboBox combo = s as MVCxComboBox;
                                combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
-                               combo.SelectedIndex = 0;
+                               combo.SelectedIndex = Model.IdEmpresa;
                            };
                        }).BindList(ViewBag.Empresas).GetHtml()
                                 @Html.ValidationMessageFor(m => m.IdEmpresa, "", new { @class = "alert-danger" })
@@ -119,7 +119,7 @@
                                            MVCxComboBox combo = s as MVCxComboBox;
                                            combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
                                            combo.Properties.ValueType = typeof(int);
-                                           combo.SelectedIndex = 0;
+                                           combo.SelectedIndex = Model.IdTipoPersona.Value;
                                        };
                                    }).BindList(ViewBag.TipoPersona).GetHtml()
                                             @Html.ValidationMessageFor(m => m.IdTipoPersona, "", new { @class = "alert-danger" })
@@ -148,7 +148,7 @@
                                    MVCxComboBox combo = s as MVCxComboBox;
                                    combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
                                    combo.Properties.ValueType = typeof(int);
-                                   combo.SelectedIndex = 0;
+                                   combo.SelectedIndex = Model.IdRegimenFiscal.Value;
                                };
                            }).BindList(ViewBag.RegimenFiscal).GetHtml()
                                             @Html.ValidationMessageFor(m => m.IdRegimenFiscal, "", new { @class = "alert-danger" })
