--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                 {
                     <li class="menu_dark"><a href="@Url.Action("Inicio", "Home")"><i class="material-icons">dashboard</i> <span class="icon-name">Dashboard</span></a></li>
                     <li class="menu_dark"><a href="@Url.Action("Requisiciones", "Requisicion")"><i class="material-icons">feedback </i><span class="icon-name">Requisición</span> </a></li>
-                    <li>
+                    @*<li>
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">monetization_on</i><span>Crédito y Cobranza</span> </a>
                         <ul class="ml-menu">
                             <li>@Html.ActionLink("Captura de abonos", "Index", "Cobranza")</li>
@@ -92,7 +92,7 @@
                             <li>@Html.ActionLink("Cartera vencida", "CarteraVencida", "Cobranza")</li>                        
                         </ul>
                     </li>
-                       <li class="menu_dark"><a href="@Url.Action("Index", "Pedidos")"><i class="material-icons">phone </i><span class="icon-name">Call Center</span> </a></li>
+                    <li class="menu_dark"><a href="@Url.Action("Index", "Pedidos")"><i class="material-icons">phone </i><span class="icon-name">Call Center</span> </a></li>*@
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">shopping_cart</i><span>Compras</span> </a>
                         <ul class="ml-menu">
