--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -99,6 +99,8 @@
                             <li><a href="@Url.Action("Ordenes", "OrdenCompra")">Orden de Compra </a></li>
                         </ul>
                     </li>
+                    <li class="menu_dark"><a href="@Url.Action("DashBoard", "Remanente")"><i class="material-icons">settings_remote</i> <span class="icon-name">Remanente</span></a></li>
+
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">image_aspect_ratio</i><span>Almacén</span> </a>
                         <ul class="ml-menu">
