JSA - Avance asignacion

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC.Presentacion.Models.Catalogos.ProductoDTO
+﻿@model MVC.Presentacion.Models.Transporte.AsignacionModel
 @using PagedList.Mvc;
 @using PagedList;
 @Html.DevExpress().GetStyleSheets(
@@ -49,7 +49,7 @@
                                                 settings.Properties.ValueType = typeof(int);
                                                 settings.Properties.TextField = "Nombre";
                                                 settings.Properties.ValueField = "Idusuario";
-                                            }).BindList(ViewBag.CuentasContables).Bind(Model.IdCuentaContable).GetHtml()
+                                            }).BindList(ViewBag.Usuarios).Bind(Model.IdCuentaContable).GetHtml()
                                             @Html.ValidationMessageFor(m => m.IdCuentaContable, "", new { @class = "alert-danger" })
                                         </div>
                                     </div>
@@ -58,14 +58,14 @@
                                             <strong>Vehiculo</strong>
                                             @Html.DevExpress().ComboBox(settings =>
                                             {
-                                                settings.Name = "IdVeiculo";
+                                                settings.Name = "IdVehiculo";
                                                 settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                                                 settings.SelectedIndex = 0;
                                                 settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
                                                 settings.Properties.DropDownStyle = DropDownStyle.DropDown;
                                                 settings.Properties.ValueType = typeof(int);
-                                                settings.Properties.TextField = "Descripcion";
-                                                settings.Properties.ValueField = "IdCuentaContable";
+                                                settings.Properties.TextField = "Nombre";
+                                                settings.Properties.ValueField = "IdVehiculo";
                                             }).BindList(ViewBag.CuentasContables).Bind(Model.IdCuentaContable).GetHtml()
                                             @Html.ValidationMessageFor(m => m.IdCuentaContable, "", new { @class = "alert-danger" })
                                         </div>
