--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/EquipoTransporte/Index.cshtml
@@ -1,12 +1,10 @@
 ﻿@model  MVC.Presentacion.Models.EquipoTransporte.ParqueVehicularModel
-
 <!DOCTYPE html>
 
 <html>
 <head>
     <script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
     <script src="~/assets/js/pages/ui/notifications.js"></script>
-
     <script type="text/javascript">
 
         var mensaje = '@ViewBag.Msj';
@@ -14,22 +12,19 @@
         if (mensaje != '') {
             $(window).on("load", showNotification(tipo, mensaje, 'top', 'center', '', ''));
         }
-        function AsignarEliminar(idPedido) {
-            $("#btnEliminar").attr("data-id", idPedido);
-        }
-
-        var Cancelar = function () {
-            var url = "/Pedidos/CancelarPedido";
-            var id = $("#btnEliminar").attr("data-id")
-            var motivoC = $("#motivo").val()
-            $.get(url, { idPedido: id, MotivoCancela: motivoC }, function (data) {
-                window.location.href = '@Url.Action("Index", "Pedidos")';
-            });
-        };
+   function AsignarEliminar(idEquipo) {
+       $("#btnEliminar").attr("data-id", idEquipo);
+    }
+    $(function () {
+        $("#btnEliminar").click(function () {
+            var idEquipo = $("#btnEliminar").attr("data-id")
+            window.location = window.location.protocol + "//" + window.location.host + "/EquipoTransporte/BorrarVehiculo/" + idEquipo;
+        });
+    });
     </script>
 </head>
 <body>
-    @using (Html.BeginForm("Nuevo", "Pedidos", FormMethod.Post))
+    @using (Html.BeginForm("Nuevo", "EquipoTransporte", FormMethod.Post))
     {
         <section class="content home">
             <div class="container-fluid">
@@ -40,14 +35,14 @@
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="@Url.Action("Inicio", "Home")"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Equipo de Transporte</li>
-                                <li class="breadcrumb-item">Catálogo Parque Vehicular</li>
+                                <li class="breadcrumb-item">Catálogo Parque Vehícular</li>
                             </ul>
                         </div>
                     </div>
                     <div class="card">
                         <div class="header">
                         </div>
-                        <div class="body">                           
+                        <div class="body">
                             <div class="row clearfix">
                                 <div class="col-sm-12">
                                     <div class="row clearfix">
@@ -59,19 +54,71 @@
                                             <b>Palabra Clave:</b>
                                             @Html.TextBoxFor(m => m.AliasUnidad, new { @class = "form-control", placeholder = "Palabra Clave" })
                                         </div>
-                                        <div class="col-sm-3">                                           
+                                        <div class="col-sm-3">
                                         </div>
                                         <div class="col-sm-3">
                                             <div class="form-group">
-                                                <input type="submit" id="btnNuevoCte" value="Nuevo" class="btn btn-raised btn-primary btn-round float-right" />
                                                 <input type="submit" name="Buscar" value="Buscar" formaction=@Url.Action("Buscar") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <br />
-                            @if (ViewBag.MensajeError != null)
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="header">
+                            <h2>Información <strong>Vehícular</strong></h2>
+                        </div>
+                        <div class="body">
+                            <div class="row clearfix">
+                                <div class="col-lg-1 col-md-1 col-sm-1">
+                                    <div class="form-group">
+                                        <div>
+                                            <label for="txtNume">
+                                                Número de Identificación:*
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-3">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.NumeroIdentificacion, new { @class = "form-control", @placeholder = "Número de Identificación" })
+                                        @Html.ValidationMessageFor(m => m.NumeroIdentificacion, "", new { @class = "alert-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-1 col-md-1 col-sm-1">
+                                    <div class="form-group">
+                                        <div>
+                                            <label for="txtNume">
+                                                Número de Placas:*
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-3">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.NumeroPlacas, new { @class = "form-control", @placeholder = "Número de Placas" })
+                                        @Html.ValidationMessageFor(m => m.NumeroPlacas, "", new { @class = "alert-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-1 col-md-1 col-sm-1">
+                                    <div class="form-group">
+                                        <div>
+                                            <label for="txtNume">
+                                                Vehículo:*
+                                            </label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3 col-md-3 col-sm-3">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.Vehiculo, new { @class = "form-control", @placeholder = "Vehículo" })
+                                        @Html.ValidationMessageFor(m => m.NumeroPlacas, "", new { @class = "alert-danger" })
+                                    </div>
+                                </div>
+                                <br />
+                                @if (ViewBag.MensajeError != null)
                             {
                                 <div class="row clearfix">
                                     <div id="divMensajeError" class="container">
@@ -86,84 +133,87 @@
                                     </div>
                                 </div>
                             }
-                            <div class="row clearfix">
-                                <div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-hover" name="EmpresasGaseras">
-                                            <thead>
-                                                <tr>
-                                                    <th>#</th>
-                                                    <th>Número de Placa</th>
-                                                    <th>Vehículo</th>
-                                                    <th>Alias</th>                                                  
-                                                    <th>Acción</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @if (Model.Pedidos != null)
+                                <div class="row clearfix">
+                                    <div class="col-lg-12 col-md-12 col-sm-12 blockquote blockquote-info btn-round">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped table-hover" name="EmpresasGaseras">
+                                                <thead>
+                                                    <tr>
+                                                        <th>#</th>
+                                                        <th>Número de Placa</th>
+                                                        <th>Vehículo</th>
+                                                        <th>Alias</th>
+                                                        <th>Acción</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @if (Model.vehiculos != null)
                                                 {
-                                                    foreach (var item in Model.Pedidos)
+                                                    foreach (var item in Model.vehiculos)
                                                     {
-                                                        <tr>
-                                                            <th>@item.IdPedido</th>
-                                                            <th>@item.Rfc</th>
-                                                            <td>@item.NombreRfc</td>
-                                                            <td>@item.Cantidad</td>
-                                                            <td>@item.EstatusPedido</td>
-                                                            <td>
-                                                                <a ID="lbEdit" href="@Url.Action("RevisarPedido", "Pedidos", new { idPedido = item.IdPedido })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                    <i class="material-icons">edit</i>
-                                                                    <span>Revisar pedido</span>
-                                                                </a>
-                                                                <a href="#ModalCancelar" data-toggle="modal" data-id="@item.IdPedido" id="btnok" class="tip" onclick="javascript: AsignarEliminar(@item.IdPedido)" data-target="#ModalCancelar" role="button" aria-haspopup="true" aria-expanded="false">
+                                                <tr>
+                                                    <th>@item.IdEquipoTransporte</th>
+                                                    <th>@item.NumeroPlacas</th>
+                                                    <td>@item.Vehiculo</td>
+                                                    <td>@item.AliasUnidad</td>
+                                                    <td>
+                                                        <a ID="lbEdit" href="@Url.Action("EditarVehiculo", "EquipoTransporte", new { id = item.IdEquipoTransporte })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
+                                                            <i class="material-icons">edit</i>
+                                                            <span>Editar vehículo</span>
+                                                        </a>
+                                                        @if (ViewBag.EsAdmin)
+                                                                {
+                                                                <a href="#ModalConfirmacion" data-toggle="modal" data-id="@item.IdEquipoTransporte" id="btnok" class="tip" onclick="javascript: AsignarEliminar(@item.IdEquipoTransporte)" data-target="#ModalConfirmacion" role="button" aria-haspopup="true" aria-expanded="false">
                                                                     <i class="material-icons">delete</i>
-                                                                    <span>Cancelar pedido</span>
+                                                                    <span>Eliminar vehículo</span>
                                                                 </a>
-                                                                @*<a ID="lbBorrar" href="@Url.Action("CancelarPedido", "Pedidos", new {  idPedido =item.IdPedido })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
-                                                                        <i class="material-icons">delete</i>
-                                                                        <span>Cancelar pedido</span>
-                                                                    </a>*@
-                                                            </td>
-                                                        </tr>
+                                                                }
+                                                    </td>
+                                                </tr>
                                                     }
                                                 }
-                                            </tbody>
-                                        </table>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row clearfix">
+                                <div class="col-lg-7 col-md-7 col-sm-7">
+                                    <div class="form-group">
+                                        @if (ViewBag.EsEdicion == false || ViewBag.EsEdicion == null)
+                                        {
+                                            <button class="btn btn-round btn-primary float-right">
+                                                <i class="zmdi zmdi-plus"></i> Agregar
+                                            </button>
+                                        }
+                                        else
+                                        {
+                                            <button btn formaction="EditarClienteLoc" class="btn btn-primary btn-round float-right">
+                                                <i class="zmdi zmdi-swap"></i> Actualizar
+                                            </button>
+                                        }
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
-
-            </div>
         </section>
-        <div class="modal fade" id="ModalCancelar" tabindex="-1" role="dialog">
-            <div class="modal-dialog modal-md" role="document">
+        <div class="modal fade" id="ModalConfirmacion" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="title" id="ModalConfirmacionLabel">Motivo de la cancelación</h5>
-                    </div>
-                    <div class="modal-body">
-                        <div class="body">
-                            <div class="col-sm-12">
-                                <div class="blockquote blockquote-info btn-round">
-                                    <textarea id="motivo" name="MotivoCancelacion" class="form-control" Rows="5" placeholder="Cual es el motivo de la cancelación?.."></textarea>
-                                </div>
-                            </div>
-                        </div>
+                        <h4 class="title" id="ModalConfirmacionLabel">¿Está seguro?</h4>
                     </div>
                     <div class="modal-footer">
-                        @*<input type="button" id="btnEliminar" value="Aceptar" class="btn btn-raised btn-primary btn-round waves-effect" />*@
-                        <button type="button" id="btnEliminar" class="btn btn-raised btn-primary btn-round" onclick="Cancelar()">Aceptar</button>
-                        <button type="button" id="btnclose" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Cancelar</button>
+                        <input type="button" id="btnEliminar" value="Si" class="btn btn-raised btn-primary btn-round waves-effect" />
+                        <button type="button" class="btn btn-danger btn-simple btn-round waves-effect" data-dismiss="modal">Cancelar</button>
                     </div>
                 </div>
             </div>
-
         </div>
     }
 </body>
-
 </html>
