--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Asignacion/Index.cshtml
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         @using (Html.BeginForm("Asignar", "Index", FormMethod.Post))
         {
-            @Html.HiddenFor(m => m.IdProducto)
+           
             <div class="block-header">
                 <div class="row">
                     <div class="col-lg-5 col-md-5 col-sm-12">
@@ -49,8 +49,8 @@
                                                 settings.Properties.ValueType = typeof(int);
                                                 settings.Properties.TextField = "Nombre";
                                                 settings.Properties.ValueField = "Idusuario";
-                                            }).BindList(ViewBag.Usuarios).Bind(Model.IdCuentaContable).GetHtml()
-                                            @Html.ValidationMessageFor(m => m.IdCuentaContable, "", new { @class = "alert-danger" })
+                                            }).BindList(ViewBag.Usuarios).Bind(Model.IdChofer).GetHtml()
+                                            @Html.ValidationMessageFor(m => m.IdChofer, "", new { @class = "alert-danger" })
                                         </div>
                                     </div>
                                     <div class="col-md-5">
@@ -66,8 +66,8 @@
                                                 settings.Properties.ValueType = typeof(int);
                                                 settings.Properties.TextField = "Nombre";
                                                 settings.Properties.ValueField = "IdVehiculo";
-                                            }).BindList(ViewBag.CuentasContables).Bind(Model.IdCuentaContable).GetHtml()
-                                            @Html.ValidationMessageFor(m => m.IdCuentaContable, "", new { @class = "alert-danger" })
+                                            }).BindList(ViewBag.CuentasContables).Bind(Model.IdVehiculo).GetHtml()
+                                            @Html.ValidationMessageFor(m => m.IdVehiculo, "", new { @class = "alert-danger" })
                                         </div>
                                     </div>
                            
