--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -94,6 +94,12 @@
                     </li>
                     <li class="menu_dark"><a href="@Url.Action("Index", "Pedidos")"><i class="material-icons">phone </i><span class="icon-name">Call Center</span> </a></li>*@
                     <li>
+                        <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">drive_eta</i><span>Equipo de Transporte</span> </a>
+                        <ul class="ml-menu">
+                            <li>@Html.ActionLink("Catalógo Parque Vehícular", "Index", "EquipoTransporte")</li>
+                        </ul>
+                    </li>
+                     <li>
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">shopping_cart</i><span>Compras</span> </a>
                         <ul class="ml-menu">
                             <li><a href="@Url.Action("Ordenes", "OrdenCompra")">Orden de Compra </a></li>
