CJAL-25/01/2019-Avance Presentacion Catalogo Combustible

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -149,6 +149,7 @@
                             <li>@Html.ActionLink("Usuarios", "Index", "Usuarios")</li>
                             <li>@Html.ActionLink("Roles", "Index", "Roles")</li>
                             <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
+                            <li>@Html.ActionLink("Combustibles", "Index", "Combustible")</li>
                             <li>@Html.ActionLink("Puntos de venta", "Index", "PuntoVenta")</li>
                             <li>@Html.ActionLink("Precio de venta", "Index", "PrecioVenta")</li>
                             <li>@Html.ActionLink("Precio de venta Otros", "Index", "PrecioVentaOtro")</li>
